@startuml class_design_optimized
' --- STILE E CONFIGURAZIONE ---
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam shadowing false
skinparam packageStyle rectangle
skinparam nodesep 0.6
skinparam ranksep 0.8

' Colori per distinguere i layer visivamente
skinparam package {
    BackgroundColor<<API>> HoneyDew
    BorderColor<<API>> DarkGreen
    BackgroundColor<<Services>> AliceBlue
    BorderColor<<Services>> SteelBlue
    BackgroundColor<<Repos>> LavenderBlush
    BorderColor<<Repos>> Maroon
    BackgroundColor<<Domain>> WhiteSmoke
    BorderColor<<Domain>> Gray
    BackgroundColor<<Infra>> Ivory
    BorderColor<<Infra>> DarkGoldenRod
}


' --- DEFINIZIONE DETTAGLI CLASSI (Contenuto Originale) ---

' API
class AuthApi {
    -service: AuthService
    +login(email: String, password: String): UserData
    +signup(user: UserData, password: String): UserData
    +logout(): void
    +getAccessToken(): String
    +getCurrentUser(): UserData
    +refreshSession(): String
    +isAuthenticated(): boolean
}

class PropertyApi {
    +createProperty(data: PropertyInput): PropertyData
    +getMyProperties(): PropertyData[]
    +getPropertyById(property_id: String): PropertyData
    +updateProperty(property_id: String, data: PropertyInput): PropertyData
    +deleteProperty(property_id: String): void
    +publishProperty(property_id: String): PropertyData
    +unpublishProperty(property_id: String): PropertyData
    +archiveProperty(property_id: String): PropertyData
    +getRoomsForProperty(property_id: String): RoomData[]
    +addRoomToProperty(property_id: String, data: RoomInput): RoomData
    +getAmenityCatalog(): PropertyAmenity[]
}

class RoomApi {
    +addRoom(property_id: String, data: RoomInput): RoomData
    +updateRoom(room_id: String, data: RoomInput): RoomData
    +deleteRoom(room_id: String): void
    +getAmenityCatalog(): RoomAmenity[]
}

class MediaApi {
    +uploadMedia(data: MediaInput): MediaData
    +deleteMedia(media_id: String): void
    +listByProperty(property_id: String): MediaData[]
}

class SearchApi {
    +searchProperties(criteria: SearchCriteria): PropertyData[]
    +getPropertyById(property_id: String): PropertyData
}

' SERVICES
class AuthService {
    -provider: IAuthProvider
    +login(email: String, password: String): UserData
    +signup(user: UserData, password: String): UserData
    +logout(): void
    +getAccessToken(): String
    +getUser(): UserData
    +refreshTokenOrLogout(): String
    -saveSession(response: AuthResponse): void
}

class PropertyService {
    -propertyRepo: PropertyRepository
    -amenityRepo: PropertyAmenityRepository
    -mediaRepo: MediaRepository
    -amenityFactory: PropertyAmenityFactory
    +get_user_properties(owner: User, owner_id: String): List<Property>
    +get_property_by_id(property_id: String): Property
    +create_property(data: PropertyInput, owner: User): Property
    +publish_property(property_id: String, owner: User): Property
    +unpublish_property(property_id: String, owner: User): Property
    +archive_property(property_id: String, owner: User): Property
    +delete_property(property_id: String, owner: User): void
    +update_property(property_id: String, data: PropertyInput): Property
}

class RoomService {
    -roomRepo: RoomRepository
    -propertyRepo: PropertyRepository
    -amenityRepo: RoomAmenityRepository
    -mediaRepo: MediaRepository
    -amenityFactory: RoomAmenityFactory
    +add_room(property_id: String, data: RoomInput): Room
    +get_room(room_id: String): Room
    +get_rooms_by_property_id(property_id: String): List<Room>
    +delete_room(room_id: String, owner: User): void
    +update_room(room_id: String, data: RoomInput, owner: User): Room
    +add_new_amenity(room_id: String, data: NewAmenityInput): Room
    +remove_room_amenity(room_id: String, amenity_id: String, owner: User): Room
}

class MediaService {
    -mediaRepo: MediaRepository
    -storage: IMediaStorage
    +upload_media(data: MediaInput): Media
    +delete_media(media_id: String): void
    +list_media_by_property(property_id: String): List<Media>
    +get_media_by_id(media_id: String): Media
    +list_media_by_room(room_id: String): List<Media>
    +list_all_media(): List<Media>
}

class SearchService {
    -searchRepo: SearchRepository
    +search(location: String): List<Dict>
}

' REPOSITORIES
class UserRepository {
    -db: Session
    +get_by_cognito_id(cognito_uuid: String): User
    +create_from_cognito(cognito_uuid: String, email: String, name: String): User
}

class PropertyRepository {
    -db: Session <<SQLAlchemy>>
    -storage: IMediaStorage
    +save(entity: Property): Property
    +get_by_id(property_id: String): Property
    +get_by_owner_id(owner_id: String): List<Property>
    +delete(property_id: String): void
}

class RoomRepository {
    -db: Session <<SQLAlchemy>>
    -storage: IMediaStorage
    +save(entity: Room): Room
    +get_by_id(room_id: String): Room
    +get_by_property_id(property_id: String): List<Room>
    +delete(room_id: String): void
}

class MediaRepository {
    -db: Session
    -storage: IMediaStorage
    +save(entity: Media, property_id: String, room_id: String): void
    +get_by_id(media_id: String): Media
    +list_by_property(property_id: String): List<Media>
    +list_by_room(room_id: String): List<Media>
    +delete(media_id: String): void
    +list_all(): List<Media>
}

class SearchRepository {
    -db: Session
    +search_properties(location: String): List<Dict>
}

abstract class AmenityRepository {
    +save(entity: IAmenity): IAmenity
    +delete(amenity_id: String): void
    +get_by_id(amenity_id: String): IAmenity
}

class PropertyAmenityRepository {
    -db: Session <<SQLAlchemy>>
    +save(entity: PropertyAmenity): PropertyAmenity
    +delete(amenity_id: String): void
    +get_by_id(amenity_id: String): PropertyAmenity
    +get_by_name(name: String): PropertyAmenity
}

class RoomAmenityRepository {
    -db: Session <<SQLAlchemy>>
    +save(entity: RoomAmenity): RoomAmenity
    +delete(amenity_id: String): void
    +get_by_id(amenity_id: String): RoomAmenity
    +get_by_name(name: String): RoomAmenity
}

' ENTITIES
class User {
    +id: String
    +cognito_uuid: String
    +email: String
    +name: String
}

interface UserData {
    +id: String
    +email: String
    +role: String
}

interface AuthResponse {
    +access_token: String
    +refresh_token: String
    +id_token: String
    +user: UserData
}

class Property {
    +id: String
    +name: String
    +description: String
    +owner: User
    +status: PropertyStatus
    +amenities: List<PropertyAmenity>
    +rooms: List<Room>
    +media: List<Media>
    +publish(): void
    +archive(): void
    +add_room(room: Room): void
}

class Room {
    +id: String
    +type: RoomType
    +price: float
    +property_id: String
    +amenities: List<RoomAmenity>
    +media: List<Media>
    +add_amenity(amenity: RoomAmenity): void
}

class Media {
    +id: String
    +file_name: String
    +storage_path: String
    +file_type: MediaType
}

interface IAmenity {
    +getName(): String
    +getCategory(): String
}

class PropertyAmenity {
    +id: String
    +name: String
    +category: String
}

class RoomAmenity {
    +id: String
    +name: String
    +category: String
}

' INFRA
interface IAuthProvider {
    +login(email: String, password: String): AuthResponse
    +signup(user: UserData, password: String): AuthResponse
    +refreshSession(refreshToken: String): AuthResponse
    +logout(): void
}

class AWSCognitoAuthProvider {
    -client: CognitoIdentityProviderClient
    +login(email: String, password: String): AuthResponse
    +signup(user: UserData, password: String): AuthResponse
    +refreshSession(refreshToken: String): AuthResponse
    +logout(): void
}

interface IMediaStorage {
    +store_media(file_name: String, file_data: bytes, type: String): String
    +delete_media(storage_path: String): void
}

class S3MediaStorage {
    -s3_client: boto3.client
    +store_media(file_name: String, file_data: bytes, type: String): String
    +delete_media(storage_path: String): void
}

abstract class AmenityFactory {
    +create_amenity(...): IAmenity
}

class PropertyAmenityFactory {
    +create_amenity(...): PropertyAmenity
}

class RoomAmenityFactory {
    +create_amenity(...): RoomAmenity
}

' --- RELAZIONI (Semplificate visivamente, stessa logica) ---

' 1. AUTH FLOW
AuthApi ..> AuthService
AuthService --> IAuthProvider
IAuthProvider <|.. AWSCognitoAuthProvider
AWSCognitoAuthProvider --> AuthResponse
AuthService ..> UserData
AuthService --> UserRepository
UserRepository ..> User

' 2. PROPERTY FLOW 
PropertyApi ..> PropertyService
PropertyService --> PropertyRepository
PropertyRepository --> Property
PropertyService --> PropertyAmenityRepository
PropertyService --> PropertyAmenityFactory
PropertyService --> UserRepository

' 3. ROOM FLOW
RoomApi ..> RoomService
RoomService --> RoomRepository
RoomRepository --> Room
RoomService --> RoomAmenityRepository
RoomService --> RoomAmenityFactory
RoomService --> PropertyRepository
RoomService --> UserRepository

' 4. MEDIA FLOW
MediaApi ..> MediaService
MediaService --> MediaRepository
MediaRepository --> Media
MediaService --> IMediaStorage
MediaService --> UserRepository
IMediaStorage <|.. S3MediaStorage

' 5. SEARCH FLOWP
SearchApi ..> SearchService
SearchService --> SearchRepository

' 6. ENTITY COMPOSITION & RELATIONS
Property "1" *-- "*" Room
Property "1" o-- "*" Media
Room "1" o-- "*" Media
Property --> User : owner
Property *-- PropertyAmenity
Room *-- RoomAmenity

' 7. INHERITANCE
AmenityRepository <|-- PropertyAmenityRepository
AmenityRepository <|-- RoomAmenityRepository
AmenityFactory <|-- PropertyAmenityFactory
AmenityFactory <|-- RoomAmenityFactory
IAmenity <|.. PropertyAmenity
IAmenity <|.. RoomAmenity

' FORZATURA ORDINE VISIVO (HIDDEN LINKS)
' Questo trucco forza i layer a stare uno sopra l'altro
AuthApi -[hidden]-> AuthService
AuthService -[hidden]-> UserRepository
UserRepository -[hidden]-> AWSCognitoAuthProvider

@enduml